# CapstoneWB

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: firm_name_chinese_cache.json  world_bank_lac_2014_sample.csv  world_bank_lac_2014_sample_1000.csv  world_bank_lac_2023_sample_1000.csv  world_bank_lac_2024_all_no_notice_filter.csv  world_bank_lac_2024_all_no_notice_filter_notice_level.csv  world_bank_lac_2024_sample_1000.csv  worldbank_idb_merged.csv
data/WorldBank/: world_bank_lac_contracts_china_60.csv
data/idb/: IDB_Project_Procurement_Awards_Dataset.csv  idb_china_contracts_wb_aligned.xlsx
data/world_bank_lac_2015_2025_yearly_notice_level/: metadata.json  world_bank_lac_2015_notice_level.csv  world_bank_lac_2016_notice_level.csv  world_bank_lac_2017_notice_level.csv  world_bank_lac_2018_notice_level.csv  world_bank_lac_2019_notice_level.csv  world_bank_lac_2020_notice_level.csv  world_bank_lac_2021_notice_level.csv  world_bank_lac_2022_notice_level.csv  world_bank_lac_2023_notice_level.csv  world_bank_lac_2024_notice_level.csv  world_bank_lac_2025_notice_level.csv
docs/: DATA_DICTIONARY.md  app.js  index.html  styles.css
docs/data/: firm_name_chinese_review.csv  world_bank_lac_contracts_china_60.csv
reports/: firm_name_chinese_review.csv
scripts/: add_chinese_firm_names.py  merge_worldbank_idb.py  reorder_merged_columns.py
src/capstonewb/: __init__.py  __main__.py  cli.py  config.py  models.py  world_bank.py
