[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capstonewb"
version = "0.1.0"
description = "World Bank procurement scraping tools for the Capstone thesis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "requests>=2.32",
]

[project.scripts]
capstonewb = "capstonewb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
